# quantum_fintek

./: .dockerignore  .gitignore  README.md
.github/workflows/: api-ci.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/app/identity/: README.md  models.md  models.py  repository.py  schemas.py  security.py
apps/api/app/identity/security/: __init__.py  token_service.py
apps/api/app/identity/users/: __init__.py
apps/api/tests/: test_identity_models.py  test_security.py  test_system.py
apps/web/: README.md
docs/: Architecture.md
