[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-fintek-api"
version = "0.1.0"
description = "QuantumFintek institutional trading platform API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "pyjwt>=2.10,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
